fixed button spacing and text size

--- a/css/index.css
+++ b/css/index.css
@@ -274,9 +274,9 @@ footer nav a {
     border-radius: 10px;
     background: white;
     text-decoration: none;
-    font-size: 15px;
+    font-size: 16px;
     height: 40px;
-    width: 100px;
+    width: 130px;
     margin-top: 10px;
     margin-bottom: 10px;
 }
